<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/LinearLayoutFileName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
        
        	<TextView
		        android:id="@+id/textViewFileName"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/set_file_name" />
        	
        	<LinearLayout 
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        		android:orientation="horizontal"  >

        		<EditText
        		    android:id="@+id/editTextFileName"
        		    android:layout_width="170dp"
        		    android:layout_height="wrap_content"
        		    android:inputType="text"
        		    android:textIsSelectable="true"
        		    android:scrollHorizontally="true" />
        		

        		<TextView
        		    android:id="@+id/textViewFileExtension"
        		    android:layout_width="wrap_content"
        		    android:layout_height="wrap_content"
        		    android:textStyle="bold"
        		    android:text="@string/file_extension" />
        	    	
        	</LinearLayout>
        	
        	<Button
	            android:id="@+id/buttonFileNameToday"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/button_today"
	            style="?android:attr/button" />
	        	
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/buttonsFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayoutFileName"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonFileNameCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/button_cancel"
            style="?android:attr/buttonBarButtonStyle" />
        

        <Button
            android:id="@+id/buttonFileNameOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/button_ok" 
            style="?android:attr/buttonBarButtonStyle"/>
	    
    </LinearLayout>
</RelativeLayout>