<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/drawer_layout"
 android:layout_width="match_parent"
 android:layout_height="match_parent" >
 	<!-- ACTIVIDAD PRINCIPAL  -->
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" >
	
	    <ScrollView 
	        android:layout_width="match_parent"
	   		android:layout_height="match_parent"
	    	android:scrollbars="vertical" >
	    	
	    	<LinearLayout
			      android:layout_width="match_parent"
			      android:layout_height="wrap_content"
			      android:orientation="vertical" >
	    	
	        
			    <TableLayout
			        android:id="@+id/TableLayout1"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:stretchColumns="0,1,2"
			        android:layout_marginTop="5dp" >
			        <!-- LINEA TABLA  -->
			        <TableRow
			            android:id="@+id/rowTitle"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content" >
			           <TextView
			        		android:id="@+id/colScene"
			        		android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:textSize="15sp"
					        android:gravity="center"
					        android:padding="5dp"		        
					        android:text="@string/scene" />
			           <TextView
			        		android:id="@+id/colTake"
			        		android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:textSize="15sp"
					        android:gravity="center"
					        android:padding="5dp"		        
					        android:text="@string/take" />
			           <TextView
			        		android:id="@+id/colTrack"
			        		android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:textSize="15sp"
					        android:gravity="center"
					        android:padding="5dp"		        
					        android:text="@string/track" />    
			        </TableRow>
			        <!-- LINEA SEPARADORA  -->
			        <TableRow
				            android:layout_width="match_parent"
				            android:layout_height="2dp"
				            android:background="#000000" >
				            <TextView
				                android:layout_width="match_parent"
				                android:layout_height="1dp"
				                android:text="" />
	        		</TableRow>
			
			    </TableLayout>
	    </LinearLayout>
	  </ScrollView>
	</RelativeLayout>
	
	<!-- MENU LATERAL -->
	<ListView
		android:id="@+id/drawer"
		android:layout_width="240dp"
		android:layout_height="match_parent"
		android:layout_gravity="left"
		android:choiceMode="singleChoice"
        android:divider="@android:color/black"
        android:dividerHeight="1dp"
		android:background="#F3F3F4" />
	
</android.support.v4.widget.DrawerLayout>